pre-switch commit (back to main branch)

--- a/index-good.html
+++ b/index-good.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
 <!--                    <div id='panel'>the panel</div>-->
-                    <div class='main grid-container' id='main-home'>
+                    <div class='main grid-container-home' id='main-home'>
 
                         <div class='grid-item tile button home' id='tile-resources'>
                             <div class='icon resources'></div>
@@ -77,6 +77,33 @@
                     <div class='main page hidden' id='main-bios'>
                         <div class='button backbutton'></div>
                         <h3>Bios</h3>
+                            <div class='main grid-container-home' id='main-bios'>
+
+                            <div class='grid-item tile button home' id='tile-resources'>
+                                <div class='icon resources'></div>
+                                <div class='title'>Resources</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-bios'>
+                                <div class='icon'></div>
+                                <div class='title'>Bios</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-headlines2030'>
+                                <div class='icon'></div>
+                                <div class='title'>2030 Headlines</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-move2030'>
+                                <div class='icon'></div>
+                                <div class='title'>2030 Move</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-headlines2040'>
+                                <div class='icon'></div>
+                                <div class='title'>2040 Headlines</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-move2040'>
+                                <div class='icon'></div>
+                                <div class='title'>2040 Move</div>
+                            </div>
+                        </div>
                     </div>
                     <div class='main page hidden' id='main-headlines2030'>
                         <div class='button backbutton'></div>
