--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class='icon indiv'></div>
                         <div class='title'>Individual Change Maker</div>
                     </div>
-                    <div class='grid-item tile button home' id='tile-welas'>
+                    <div class='grid-item tile button home' id='tile-weles'>
                         <div class='icon'></div>
                         <div class='title'>Well-established Business</div>
                     </div>
