bios page started

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                         </div>
                     </div>
                     <div class='main grid-container hidden' id='main-home'>
-
                         <div class='grid-item tile button home' id='tile-resources'>
                             <div class='icon resources'></div>
                             <div class='title'>Resources</div>
@@ -87,7 +86,35 @@
                     </div>
                     <div class='main page hidden' id='main-bios'>
                         <div class='button backbutton'></div>
-                        <h3>Bios</h3>
+                        <h3>Bios now</h3>
+
+                        <div class='sub grid-container' id='sub-bios'>
+                            <div class='grid-item tile button home' id='tile-resources'>
+                                <div class='icon resources'></div>
+                                <div class='title'>Resources</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-bios'>
+                                <div class='icon'></div>
+                                <div class='title'>Bios</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-headlines2030'>
+                                <div class='icon'></div>
+                                <div class='title'>2030 Headlines</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-move2030'>
+                                <div class='icon'></div>
+                                <div class='title'>2030 Move</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-headlines2040'>
+                                <div class='icon'></div>
+                                <div class='title'>2040 Headlines</div>
+                            </div>
+                            <div class='grid-item tile button home' id='tile-move2040'>
+                                <div class='icon'></div>
+                                <div class='title'>2040 Move</div>
+                            </div>
+                        </div>
+
                     </div>
                     <div class='main page hidden' id='main-headlines2030'>
                         <div class='button backbutton'></div>
